--- a/index.html
+++ b/index.html
@@ -59,29 +59,38 @@
 </nav>
 <section class="hero text-center" style="color:white; padding:70px 20px;">
         <h1 style="font-family:'Permanent Marker', cursive; font-size:3rem; margin-bottom:20px;">
-            La gorra que marca tu estilo
+            MILIETHATS
         </h1>
         <p style="font-family:'Poppins', sans-serif; font-size:1.2rem; max-width:600px; margin:0 auto 30px auto;">
-            Descubre MilietHats, un accesorio único para cualquier estilo. Calidad y diseño que destaca en cualquier lugar.
+            Olvídate de lo básico. Diseños exclusivos nacidos de la pasión por crear algo que realmente destaque.
         </p>
         <a href="catalogo.html" class="btn btn-warning" style="font-family:'Permanent Marker', cursive; font-size:1.2rem;">
-            Comprar ahora
+            DESCUBRE LA COLECCIÓN
         </a>
 </section>
 
 <!-- PRODUCTO DESTACADO CON CARRUSEL -->
 <section class="catalogo-section">
-    <h2 class="servicios-destacados text-center">Producto Destacado</h2>
+    <h2 class="servicios-destacados text-center">Los Originales</h2>
     <div id="productoCarrusel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3500" style="max-width:400px; margin:0 auto;">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/catalogo1.PNG" class="d-block w-100" alt="Gorra - Vista frontal" style="border-radius:15px;">
+                <img src="img/gorras/DSC_6587 copia.jpg" class="d-block w-100" alt="Gorra - Vista frontal" style="border-radius:15px;">
             </div>
             <div class="carousel-item">
-                <img src="img/catalogo1.PNG" class="d-block w-100" alt="Gorra - Vista lateral" style="border-radius:15px;">
+                <img src="img/gorras/DSC_6588.JPG" class="d-block w-100" alt="Gorra - Vista lateral" style="border-radius:15px;">
             </div>
             <div class="carousel-item">
-                <img src="img/catalogo.PNG" class="d-block w-100" alt="Gorra - Vista trasera" style="border-radius:15px;">
+                <img src="img/gorras/DSC_6589.JPG" class="d-block w-100" alt="Gorra - Vista trasera" style="border-radius:15px;">
+            </div>
+            <div class="carousel-item active">
+                <img src="img/gorras/DSC_6591.JPG" class="d-block w-100" alt="Gorra - Vista frontal" style="border-radius:15px;">
+            </div>
+            <div class="carousel-item">
+                <img src="img/gorras/DSC_6592.JPG" class="d-block w-100" alt="Gorra - Vista lateral" style="border-radius:15px;">
+            </div>
+            <div class="carousel-item">
+                <img src="img/gorras/DSC_6593.JPG" class="d-block w-100" alt="Gorra - Vista trasera" style="border-radius:15px;">
             </div>
         </div>
         <!-- Controles -->
@@ -95,7 +104,7 @@
         </button>
     </div>
     <div class="text-center mt-3">
-        <span style="font-size:1.5rem; color:white; font-family:'Permanent Marker', cursive;">Gorra MilietHats</span>
+        <span style="font-size:1.5rem; color:white; font-family:'Permanent Marker', cursive;">The Midnight Rose & Lunar Eclipse Diamond</span>
     </div>
 </section>
 
@@ -104,9 +113,9 @@
 <script async src="https://www.tiktok.com/embed.js"></script>
 
 <section class="videos-section text-center" style="padding:50px 20px; color:white;">
-    <h2 class="servicios-destacados">Míranos en acción</h2>
+    <h2 class="servicios-destacados">Únete al Estilo Miliet.</h2>
     <p style="font-family:'Poppins', sans-serif; max-width:600px; margin:0 auto 30px auto;">
-        Síguenos en TikTok e Instagram y descubre cómo usamos nuestras gorras.
+        Síguenos en TikTok e Instagram para ver looks, estrenos y la vida detrás de la marca.
     </p>
     <div class="d-flex justify-content-center flex-wrap gap-3">
         <!-- Video embed ejemplo TikTok -->
@@ -141,12 +150,12 @@
 
 <!-- MINI NOSOTROS -->
 <section class="nosotros-mini text-center" style="padding:50px 20px; color:white;">
-        <h2 class="servicios-destacados">Quiénes Somos</h2>
-        <p style="max-width:600px; margin:0 auto 20px auto; font-family:'Poppins', sans-serif;">
-            MilietHats nació de la pasión por los accesorios que destacan. Cada gorra refleja calidad y estilo sin límites.
+    <p style="max-width:600px; margin:0 auto 20px auto; font-family:'Poppins', sans-serif;">
+            <h2 class="servicios-destacados">Dos Mentes. Un Movimiento.</h2>
+            MilietHats no es solo una marca, es el resultado de una conexión entre el diseño y la autenticidad. Cada gorra es la promesa de llevar un accesorio con historia y un diseño original que no verás en la calle.
         </p>
         <a href="nosotros.html" class="btn btn-warning" style="font-family:'Permanent Marker', cursive;">
-            Conócenos
+            CONOCE LA HISTORIA COMPLETA
         </a>
 </section>
 
