Solucion final: Forzar subida de contenido de img y corregir rutas estaticas

--- a/catalogo.html
+++ b/catalogo.html
@@ -66,5 +66,5 @@
     </footer>
 </body>
 <!-- Al final del body, después de bootstrap -->
-<script src="js/funciones.js"></script>
+<script src="funciones.js"></script>
 </html>
