--- a/checkout.html
+++ b/checkout.html
@@ -104,6 +104,6 @@
         <p>&copy; 2025 MilietHats. Todos los derechos reservados.</p>
     </footer>
 </body>
-<script src="js/funciones.js"></script>
-<script src="js/checkout.js"></script>
+<script src="funciones.js"></script>
+<script src="checkout.js"></script>
 </html>
