--- a/nosotros.html
+++ b/nosotros.html
@@ -84,5 +84,5 @@
         <p>&copy; 2025 MilietHats. Todos los derechos reservados.</p>
     </footer>
 </body>
-<script src="js/funciones.js"></script>
+<script src="funciones.js"></script>
 </html>
