--- a/producto.html
+++ b/producto.html
@@ -96,6 +96,6 @@
   <p>&copy; 2025 MilietHats. Todos los derechos reservados.</p>
 </footer>
 
-<script src="js/funciones.js"></script>
+<script src="funciones.js"></script>
 </body>
 </html>
