--- a/index.html
+++ b/index.html
@@ -169,5 +169,5 @@
 </footer>
 </body>
 <!-- Al final del body, después de bootstrap -->
-<script src="js/funciones.js"></script>
+<script src="funciones.js"></script>
 </html>
