Alerta al Pagar

--- a/checkout.html
+++ b/checkout.html
@@ -104,6 +104,7 @@
         <p>&copy; 2025 MilietHats. Todos los derechos reservados.</p>
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="funciones.js"></script>
 <script src="checkout.js"></script>
 </html>
