Nosotros y Boton de pagar ahora arreglado

--- a/catalogo.html
+++ b/catalogo.html
@@ -39,7 +39,7 @@
               </div>
               <hr>
               <p class="text-end mb-2">Total: $<span id="cart-total">0.00</span></p>
-              <button id="checkout-btn" class="btn btn-warning w-100">Pagar ahora</button>
+              <a href="checkout.html" class="btn btn-warning w-100">Pagar ahora</a>            
             </ul>
           </li>
         </ul>
