--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,8 @@
               </div>
               <hr>
               <p class="text-end mb-2">Total: $<span id="cart-total">0.00</span></p>
-              <button class="btn btn-success" onclick="buyNow(name, price, image)">Pagar ahora</button>
+              <!-- <button class="btn btn-success" onclick="buyNow(name, price, image)">Pagar ahora</button>-->
+              <a href="checkout.html" class="btn btn-warning w-100">Pagar ahora</a>
             </ul>
           </li>
         </ul>
